# MCServerUpdater

./: .gitignore  .gitmodules  CMakeLists.txt  MCServerUpdater.c  MCServerUpdater.sln  MCServerUpdater.vcxproj  MCServerUpdater.vcxproj.filters  README.md  deps.txt  mcserverupdater.c
